接入wsLogin和wsLogout
